--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react": "^17.0.38",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "socket.io-client": "^3.0.0",
+    "typescript": "^4.5.4"
   },
   "devDependencies": {
     "eslint": "8.5.0",
